<resources>
    <string name="app_name">Awesome_Calculator</string>
    <string name="sum">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="Delete">DEL</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="All_Clear">AC</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="solve">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
</resources>